@@ -2,23 +2,25 @@
 Hash: SHA256
 
 DIST grsecurity-sources-extras-4.9.44.tar.xz 2643884 SHA256 2c8ea5db8c7b0686189fd358fda2237ba1f3a239b31ac8c8f38a9fe81f5533bb SHA512 ef34a5ae6bd99763fe812a4342107ff5032af2b41b560d43279562e8511c2b36da06e30ccc599e23160a95a3833f93d30133e6d9a98cccbb5e6fa028a5e7bd09 WHIRLPOOL 7b14947feb0f0446baa9489a8dd215815414f88614d18848e51a2fc62234df7290fb2513fe87b7907d07aa6d2cea8a3d5f2253b1b0a7b75a9f2dd09d02b7847c
+DIST grsecurity-sources-extras-4.9.48.tar.xz 2542704 SHA256 549446a91147d676debb576a8963ab54fe27d5358b7300e89c0dda5fcd3933f1 SHA512 91b92d457236b82166d0073db8d9807d76607f997067380e2453319de91666aee72570130c682a8ab0f32a320c1f070816583d1f3e296be9147c00794bceedcc WHIRLPOOL 88299efbe138e59d6fd0c20dd4b9288759247e0801de7a675eb4194a11853617146b395133c9a0e49b116af63f56abcf8871cdf73d01d127353d206fff551b8a
 DIST linux-4.9.tar.xz 93192404 SHA256 029098dcffab74875e086ae970e3828456838da6e0ba22ce3f64ef764f3d7f1a SHA512 bf67ff812cc3cb7e5059e82cc5db0d9a7c5637f7ed9a42e4730c715bf7047c81ed3a571225f92a33ef0b6d65f35595bc32d773356646df2627da55e9bc7f1f1a WHIRLPOOL 072505b29972ad120eb25a074217847c9c2813416c4903e605a0433574f5f87616dbea0b1454e4b19acc48107f11274b682958b1d773373156e99f8163e6606a
 EBUILD grsecurity-sources-4.9.44.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
-MISC ChangeLog 361 SHA256 26b5da919ca044681add76eef74325d6d39ebdfb39f9f50caf24e39cb680a5a0 SHA512 b225c6bf537312e6bdbb63d6ba31a6015e33ceb787410576bedfde5782c20ca357873f505381f40b6183887aa0416e3e82f869565a9252c60c6ac05a5a879232 WHIRLPOOL 2dfb797a824887153d2c251f43a3d1b5e742199e9631e82e4bcf96a2f40a52b84ecea6fb753f32240d471917a90ef2fffdc892c5b692add837081c9a4aee0067
+EBUILD grsecurity-sources-4.9.48.ebuild 1175 SHA256 34b5670cbd765212f3bb36fdb6c8e5d05909664f5114b124d51ed352c5a5dfdd SHA512 f1614b5d2ba6c6efe3e49c74b374db8d25e5952ae736c1c54906cc035298a38dcfc71c51d2b9b2d7fc67a8e37a84d7abde0b215461d6aa1f53ed578601f4a5be WHIRLPOOL 6da24e3a8348c3d7e9eef64a0718d496bcc7d1cfb9eb4937627665bc5c0c2a067fb22a237b90922f0eb5ccd4a14304f2d0cedcb03e8edba478053987184165e6
+MISC ChangeLog 556 SHA256 1ac1bfb2eafe2657f38aca1c5790b7bd6c8955f074ef40a71f8025e7725740c1 SHA512 b09aacc15629c43fd76ba9b259ae82a8ed9337c7da4f588a536eead5a73fc8cfb9f5a6473c73505be1734be3fff1bcb2efad7b02c07feb849b8d8bb1fbdb5bdb WHIRLPOOL a17c7f46c5dba7d0b45316d26badeff4c06f6c6672d4264da720425b0fb186089ff887d2802c06af1df4baf067ba2678fda8510d8f4aa30c50d3c9e2f97ef59a
 MISC metadata.xml 896 SHA256 7f5f98ff259561a6b76f74a0ba829883c075d63ca8939068c253b7d90798089f SHA512 697ff11e06a9f9561962603edca7b3bcf93d61467f794946a7372885e2ccdae01fbd30488d2818090309e79438cda44aea2ed39fe95ad55935bb1b0b3c496a74 WHIRLPOOL fdfd6f21d7164e167ab3e2fcfe1ce10b8c6428534f05577032c8af03bdb679783641c83c8615e036f4677cf72c7d98708502aa33cec408508a085a0148471ec5
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlmetmoACgkQunvTUHGU
-RZ/iOxAAxPrXvN+nWkJ1iJCfrOdVzVSrHuE7BX8KoBdgN6QM9C3Kyl1jBtn72zCc
-AJxky10xeDa5bxZxoRc83Mt9XyZCZMRr7O+nCEw4REGAB6eJsJrALTcmFSz/Eu5+
-Dk5wcqelKlBG8J2rgk9BCA3bb+vE9i6IKGURR77Vo1hUXy6Rac84JM/At58U8+0t
-pWdN1/2EFCSx5zTBzb0PP6fv6/baR2negDjUqZq0ypaRGy3ruTKH/G44HKTZLqEc
-ln/nUWVTnZChA4m+4bAWHSuM1P89+sKAYhQfaMxcpb7DK3BgkIfuDXE6HpB/E4oP
-5CreWq+15ypd275zSqy0XEteiBQsWRG+rnaVQQDdewAT9KHlCMg9yNRwuKG0J96w
-STREAzga8ogLnbBPogdbUjnxgLVoPOAxyS8KxxXjJL7eIauIC1m8v0MOkhaM/WJS
-DPfN4+PI8bG5amoYOZjkFNEpUkWnVS08rIi1QGroEdW/jVLl7A4S7HAwlRqlPbiy
-NQ+FSHtoZuIMVYQHr6o9uy1OsNtyp89KzdU2TGK7Qx7tOp+SS8E7FsnvOzDXyk2w
-qiBo7ydDcjHfr30W1KHMLOjTkiKGacqCZYHGazeiwu1qZNK/nd8gzvKYPyhi171O
-27WgTKLeO8kA6OxzUwQYEYUZzDIK7mDOq0CWIGYZj6wal7/zLoA=
-=iSjX
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAlmzyvwACgkQunvTUHGU
+RZ/uxQ/+LMRaErzYVHsHK4Mgp8ODzb3YzkaZbiJxORMiHen8G31oZNWhEGUasZTZ
+zx3eqTE/2yvUprcGLTh3oJWcjWpaCJ7aGcn6BrH23gIWK8DyHPmAQ1amtduijzWV
+/sYUmKMOYLP6Ih4LKKjmwAVwjSl2+powTQVxVGPEBA+DBEoARYHEErXE690TDvNJ
+mCVVrEbKnXdJ83UA3ooWM7OSnyg0QOOr0jnDfUGf49Eu35pRICRKbO+IbUPOQXc/
+iquYEyv92VSAEiIb+T7EjSgMOVxTJEks2ah3XxMAPNr5ZF29ryhVivslHXqnnV1r
+Fyhd6q3e9E89hrfzNcQExhVGgUqF4GdinaXPvCZeqR98AynzJRhlIg7gf1BgIj6B
+qFxZTACtQ1POS9MdQauOOTI6JFLr3cinRN6K7AJyXqRPI2vIyO/T/+eUTOrHRd5l
+yR6uCx2s1UhJ1YNx8UXT2OWer7lXzrxYHzjyBJB07CadFOheb2H7RAxQe5kwn0kz
+dMfb6vSpRuZIdA57p+z7Jby09447fGuXa2ffT5xYonqItoFpcUTdHPGmWGUmJv1W
+2x0+92xN+2qwqE8c3GEERTVRs8o8jUBrFdTfts6A7cuFYS/fmkfs91EGBt0nyQxj
+Evw/8EQR5eNG3racgtDyDwdeZHEWA8A6p1IX8DyKSa08djm/oGI=
+=Y+lg
 -----END PGP SIGNATURE-----
